--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -2,13 +2,34 @@
 - js "category"
 - @site_layout = "site"
 
-.top_box
-  .z_inner
-    - @top_categories.each do |category|
-      %a{href: blog_path(category.top_blog.blog)}
-        %img{src: category.top_blog.image}
-
-- @categories.each do |category|
-  %a{href: category_path(category.name)}
-    = category.name
-  
+.spread_main
+  - @top_categories.each do |category|
+    %a.spread_banner{href: blog_path(category.top_blog.blog), style: (category == @top_categories.first ? "" : "display:none")}
+      %img{src: category.top_blog.image}
+  .spread_bg
+  .categories
+    .left{class: "z_bg0"}
+      <<
+    .categories_box
+      .categories_inner
+        - categories_index = 0
+        - @categories.each do |category|
+          - categories_index += 1
+          %div{class: "z_bg#{categories_index%2+1}"}
+            .spread_rowname<
+              = category.name
+            - category.category_subs.each do |sub|
+              - if sub == category.category_subs.first || sub == category.category_subs.second
+                .spread_rowbox{style: "background-image:url(#{sub.blog.icon.url_for(:medium)})"}<
+                  %a{href: blog_path(sub.blog), target: "_blank"}<
+                    &nbsp;
+                %a.blog_name{href: blog_path(sub.blog), target: "_blank"}<
+                  = sub.blog.title
+                %a{href: "#"}<
+                  +加关注
+    .right{class: "z_bg0"}
+      >>
+.category_list{style: "display:none;"}
+  - @categories.each do |category|
+    %a.spread_rowname{href: category_path(category.name)}<
+      = category.name
