--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -56,6 +56,9 @@
     background-color: #fffbda
   .z_bg2
     background-color: #dbffda
+  .follow
+    width: 80px
+    height: 26px
 
 .categories
   .left,
