--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -389,6 +389,7 @@
     padding-left: 10px
   .contentbox
     width: 410px
+    height: 135px
     float: left
     padding: 10px 30px 0 10px
     position: relative
