--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -52,6 +52,10 @@
         display: block
       &.blog_name
         height: 32px
+    .spread_rowbox a
+      width: 60px
+      height: 60px
+      padding: 0
   .follow
     width: 80px
     height: 26px
