--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -435,6 +435,9 @@
       -moz-border-radius: 5px
       -webkit-border-radius: 5px
       float: left
+      a
+        width: 60px
+        height: 60px
     .theme
       width: 60px
       height: 24px
