--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -56,6 +56,8 @@
       width: 60px
       height: 60px
       padding: 0
+    .spread_rowname a
+      padding: 0
   .follow
     width: 80px
     height: 26px
