--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -3961,3 +3961,59 @@ margin-bottom:30px;
 	color:#8e8e8e;
 }
 
+
+/***song menu***/
+
+.song_menu{
+width:600px;
+border-radius: 0px 0px 10px 10px;
+border:1px solid #cadbea;
+background:white;
+padding:10px 10px 0px 10px;
+border-top:0px;	
+}
+
+.song_menu h1, .song_menu h2{
+	padding:0;
+	margin:0;
+	font-size:14px;
+	line-height:200%;
+}
+.song_menu h1{
+	width:400px;
+	float:left;
+	overflow: hidden;
+}
+.song_menu h2{
+	margin-left:400px;
+	text-align:center;
+}
+
+.song_menu div{
+	height:30px;
+}
+.song_menu a.item{
+	
+	display:block;
+	text-decoration: none;
+	background:white;
+	height:30px;
+	clear:both;
+}
+
+.song_menu a.item:hover{
+	background:#cadbea;
+	color:white;
+	text-decoration: none;
+}
+
+
+div.song_menu_footer{	
+	border-top:1px solid #cadbea;
+	font-size:20px;
+	line-height:40px;
+	height:40px;
+	font-weight:bold;
+	clear:both;
+	text-align:right
+}
