--- a/app/views/users/buzz.html.haml
+++ b/app/views/users/buzz.html.haml
@@ -1,4 +1,4 @@
-- @sub_title = @nav_user_title = '我的回复'
+- @sub_title = @nav_user_title = '回复我的'
 - @now_path = "buzz"
 - css :buzz
 - if current_user.comments_notices.unreads.count > 0
