--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -534,3 +534,51 @@ fieldset.appearance
   .caption
     background: url('/images/douban_24x24.png') no-repeat
     padding-left: 2em
+
+.rss
+  border: 1px #ddd solid
+  @include border-radius(8px)
+  padding: 0.5em
+  margin-top: 0.5em
+  .rss_input
+    @include border-radius(5px)
+    border: 1px solid #DDD
+    padding: 3px 5px
+    margin-top: 5px
+    width: 235px
+  .rss_submit
+    background: #0095ff
+    padding: 3px 6px
+  .rss_item
+    border: 2px solid #ddd
+    font-size: 14px
+    padding: 0.3em        
+    background: #E6EFC2
+    color: #264409
+    border-color: #C6D880
+    margin-bottom: 5px
+    display: inline-block
+    width: 280px
+    .z_title
+      display: inline-block
+      width: 200px
+      padding-left: 10px
+      overflow: hidden
+    .z_type
+      background: #C6D880
+      padding: 0.2em        
+      margin-right: 10px
+    .z_delete
+      background: url(/images/icons.gif?1305513193) -100px -20px
+      @include hide_text
+      overflow: hidden
+      display: inline-block
+      width: 14px
+      height: 14px
+    &.z_error
+      background: #FBE3E4
+      color: #8A1F11
+      border-color: #FBC2C4
+  .rss_note
+    font-size: 12px
+    color: gray
