--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -128,7 +128,7 @@
           = render :partial => 'sync/target', :object => douban,
             :locals => {:target_name => 'douban'}
     .rss{data: {widget: "rss_importer"}}
-      %lable<
+      .caption<
         RSS关联
       %select
         %option{value: "link"}<
