--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -540,6 +540,10 @@ fieldset.appearance
   @include border-radius(8px)
   padding: 0.5em
   margin-top: 0.5em
+  .caption
+    background: url('/images/embed/rss.png') no-repeat
+    display: inline-block
+    padding-left: 2em
   .rss_input
     @include border-radius(5px)
     border: 1px solid #DDD
