--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -127,7 +127,7 @@
         %span.partial_anchor
           = render :partial => 'sync/target', :object => douban,
             :locals => {:target_name => 'douban'}
-    .rss{data: {widget: "rss_importer"}}
+    .rss{data: {widget: "rss_importer"}, style: "display:none"}
       .caption<
         RSS关联
       %select
