--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -49,7 +49,7 @@
         %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
           = post.comments.count == 0 ? " " : post.comments.count
       - if post.repost_count_all && post.repost_count_all > 0
-        %a.repost_count{href: post_reposts_path(post)}
+        %a.repost_count{href: post_reposts_path(post), :title => "转贴记录", :data => { :tgt => "reposts" } }
           .repost_icon
           .num
             = post.repost_count_all
