--- a/app/views/posts/_reposts.html.haml
+++ b/app/views/posts/_reposts.html.haml
@@ -2,10 +2,16 @@
   .c_arrow
   %ul
     %li
-      %a{ :href => blog_path(@post.ancestor.blog), :title => "原帖：" + @post.ancestor.blog.title }
-        %img.original{src: @post.ancestor.blog.icon.url_for(:small)}
+      - if @post.ancestor
+        %a{ :href => blog_path(@post.ancestor.blog), :title => "原帖：" + @post.ancestor.blog.title }
+          %img.original{src: @post.ancestor.blog.icon.url_for(:small)}
+      - elsif @post.ancestor_id
+        原帖已被删除
+      - else
+        %a{ :href => blog_path(@post.blog), :title => "原帖：" + @post.blog.title }
+          %img.original{src: @post.blog.icon.url_for(:small)}
     %li.z_left
-    - @post.repost_history.each do |post|
+    - @post.repost_history && @post.repost_history.each do |post|
       %li
         %a{ :href => posts_blog_path(post), :title => post.blog.title }
           %img{src: post.blog.icon.url_for(:small)}
