--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -504,7 +504,8 @@
   .num
     float: left
 
-.reposts
+.reposts,
+.favors
   clear: both
   background: #f4f4f4
   padding: 1px
@@ -529,3 +530,6 @@
     background: url(/images/embed/right-arrow.png) no-repeat center
     @include size(32px, 32px)
     margin: 0 10px
+.favors
+  .c_arrow
+    right: 95px
