Could create Audio for now

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -397,4 +397,13 @@
     height: 60px
     width: 60px
     cursor: pointer
-  
+
+.empty_message
+  display: none
+
+.empty
+  *
+    display: none
+
+  .empty_message
+    display: block
