--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -4,7 +4,7 @@
 - css "user"
 
 - content_for :content, do
-  .registation_intro{:style => "background:url(/images/registation.png) no-repeat"}
+  .registation_intro{:style => "background:url(/images/registation.png) no-repeat bottom"}
     .registation_logo
     
   .registation_title
