--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -132,11 +132,11 @@
    
   .registation_intro
     width: 960px
-    height: 420px
+    height: 440px
    
   .registation_title
     text-align: center
-    margin-top: 10px
+    margin-top: 20px
     margin-bottom: 5px
     .avatar
       @include size(60px, 60px)
@@ -147,7 +147,8 @@
       background-position: center
     .txt
       display: inline-block
-      font-size: 30px
+      font-size: 24px
+      padding: 10px
       color: #3366cc
    
   .registation
