--- a/app/views/posts/_form_audio.html.haml
+++ b/app/views/posts/_form_audio.html.haml
@@ -10,5 +10,5 @@
     &nbsp;
   .title_text.audio{'data-input-holder' => 1}
     = text_field_tag :song_id, '', :alt => '搜索歌名，歌手，专辑...',
-      'data-widget' => 'overtext autocpl'
+      'data-widget' => 'overtext autocpl', 'autocomplete' => 'off'
   = content_for :content_area
