kmon stylesheet change

--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -19,7 +19,7 @@
     .slogan
       想看更多有趣的内容？
       %a.register{href: '#'}
-        登上宽岛
+        立即注册
 %div{style: "display: none !important;"}
   #kmon_register
     .title 注册宽岛，查看更多有趣内容......
