--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -51,7 +51,7 @@
       - if (post.repost_count && post.repost_count > 0) || post.ancestor_id
         %a.repost_count{href: post_reposts_path(post), :title => "转贴记录", :data => { :tgt => "reposts" } }
           .repost_icon
-          - if post.repost_count && post.repost_count_all > 0
+          - if post.repost_count_all && post.repost_count_all > 0
             .num
               = post.repost_count_all
       - if post.favor_count && post.favor_count > 0
