--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -6,6 +6,7 @@
   - @top_categories.each do |category|
     %a.spread_banner{href: blog_path(category.top_blog.blog), style: (category == @top_categories.first ? "" : "display:none")}
       %img{src: category.top_blog.image}
+  .slide_togglers
   .spread_bg
   .categories
     .spread_prev.row.row_button<
