--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -26,6 +26,18 @@
       width: 900px
       height: 300px
 
+.slide_togglers
+  z-index: 99
+  position: relative
+  span
+    display: inline-block
+    height: 10px
+    width: 10px
+    border: 3px solid blue
+    @include border-radius(8px)
+    margin: 2px
+    &.highlight
+      background: red
 .spread_main
   .row
     width: 100px
