--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -14,12 +14,15 @@
   overflow: hidden
 
 .spread_banner
-  width: 900px
+  width: 860px
   height: 300px
   position: absolute
-  top: 0
-  left: 0
+  top: 32px
+  left: 20px
   overflow: hidden
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
+  -moz-box-shadow: 2px 4px 6px rgba(0, 0, 0, .3)
   a
     display: inline-block
     img
@@ -29,6 +32,8 @@
 .slide_togglers
   z-index: 99
   position: relative
+  top: 300px
+  left: 750px
   span
     display: inline-block
     height: 10px
@@ -42,8 +47,8 @@
   .row
     width: 100px
     height: 300px
-    background: url('/images/embed/spread_rowbg.gif') repeat-y
-    padding-top: 320px
+    background: url('/images/embed/spread_row.gif') no-repeat bottom right
+    padding-top: 390px
     float: left
     a
       width: 80px
@@ -73,6 +78,10 @@
   .follow
     width: 80px
     height: 26px
+    text-align: center
+    a
+      color: #8e8e8e
+
   .noimage
     width: 100px
     height: 300px
@@ -81,7 +90,7 @@
   .row_button
     width: 100px
     height: 300px
-    padding-top: 320px
+    padding-top: 400px
     float: left
     opacity: 0.5
     -moz-opacity: 0.5
@@ -98,7 +107,7 @@
     float: left
     cursor: pointer
     padding-top: 0
-    margin-top: 340px
+    margin-top: 450px
   .spread_prev
     background: url('/images/embed/spread_prev.gif') no-repeat
   .spread_next
@@ -126,11 +135,11 @@
 
 .spread_bg
   width: 900px
-  height: 500px
-  background: url('/images/spread_bg.png') no-repeat center
+  height: 900px
+  background: url('/images/spread_bg.gif') no-repeat center
   position: absolute
   overflow: hidden
-  top: 400px
+  top: 0
   left: 0
   bottom: 0
   opacity: 0.2
