--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -14,13 +14,13 @@
     .categories_box
       .categories_inner
         - @categories.each do |category|
-          .row
+          .row{class: (category.category_subs.count > 2 ? "row2" : "")}
             .spread_rowname<
               %a{href: category_by_name_path(category.name)}<
                 = category.name
-            - category.category_subs.each do |sub|
-              - if sub == category.category_subs.first || sub == category.category_subs.second
-                .spread_rowbox{style: "background-image:url(#{sub.blog.icon.url_for(:medium)})"}<
+            - category.category_subs.take(4).each do |sub|
+              .spread_rowbox
+                .spread_rowimg{style: "background-image:url(#{sub.blog.icon.url_for(:medium)})"}<
                   %a{href: blog_path(sub.blog), target: "_blank"}<
                     &nbsp;
                 %a.blog_name{href: blog_path(sub.blog), target: "_blank"}<
