--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -12,47 +12,49 @@
   font-size: 14px
   position: relative
   overflow: hidden
-
-.spread_banner
-  width: 860px
-  height: 300px
-  position: absolute
-  top: 32px
-  left: 20px
-  overflow: hidden
-  box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
-  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
-  -moz-box-shadow: 2px 4px 6px rgba(0, 0, 0, .3)
-  a
+  .spread_banner
+    width: 860px
+    height: 300px
+    position: absolute
+    top: 32px
+    left: 20px
+    overflow: hidden
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
+    -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
+    -moz-box-shadow: 2px 4px 6px rgba(0, 0, 0, .3)
+    a
+      display: inline-block
+      img
+        width: 900px
+        height: 300px
+   
+  .slide_togglers
+    z-index: 99
+    position: relative
+    top: 290px
+    left: 740px
+    padding: 10px
     display: inline-block
-    img
-      width: 900px
-      height: 300px
-
-.slide_togglers
-  z-index: 99
-  position: relative
-  top: 290px
-  left: 740px
-  padding: 10px
-  display: inline-block
-  span
-    cursor: pointer
-    display: inline-block
-    height: 12px
-    width: 12px
-    border: 3px solid white
-    @include border-radius(12px)
-    margin: 3px
-    &.highlight
-      background: white
-.spread_main
+    span
+      cursor: pointer
+      display: inline-block
+      height: 12px
+      width: 12px
+      border: 3px solid white
+      @include border-radius(12px)
+      margin: 3px
+      &.highlight
+        background: white
   .row
     width: 100px
     height: 300px
     background: url('/images/embed/spread_row.gif') no-repeat bottom right
     padding-top: 390px
     float: left
+    &.row2
+      width: 184px
+      .spread_rowname a
+        width: 160px
     a
       width: 80px
       height: 30px
@@ -72,12 +74,27 @@
         display: block
       &.blog_name
         height: 32px
-    .spread_rowbox a
-      width: 60px
-      height: 60px
-      padding: 0
+    .spread_rowbox
+      display: inline-block
+      width: 80px
+      .spread_rowimg
+        width: 60px
+        height: 60px
+        border-radius: 5px
+        -moz-border-radius: 5px
+        -webkit-border-radius: 5px
+        margin-left: 18px
+        .spread_rowimg a
+          width: 60px
+          height: 60px
+          padding: 0
     .spread_rowname a
-      padding: 0
+      color: #8E8E8E
+      font-size: 16px
+      text-align: center
+      padding: 0 12px 10px 8px
+      .spread_rowname a
+        padding: 0
   .follow
     width: 80px
     height: 26px
@@ -122,19 +139,6 @@
     width: 700px
     .categories_inner
       width: 9999px
-
-.spread_rowbox
-  width: 60px
-  height: 60px
-  border-radius: 5px
-  -moz-border-radius: 5px
-  -webkit-border-radius: 5px
-  margin-left: 18px
-
-.spread_rowname
-  color: #000000
-  text-align: center
-  padding: 0 12px 10px 8px
 
 .spread_bg
   width: 900px
