--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -8,6 +8,7 @@
   height: 860px
   padding: 0
   margin: 0
+  margin-top: -10px
   color: #000000
   font-size: 14px
   position: relative
@@ -16,8 +17,8 @@
     width: 860px
     height: 300px
     position: absolute
-    top: 32px
-    left: 20px
+    top: 34px
+    left: 22px
     overflow: hidden
     box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
     -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, .3)
@@ -30,7 +31,7 @@
    
   .slide_togglers
     z-index: 99
-    position: relative
+    position: absolute
     top: 290px
     left: 740px
     padding: 10px
