--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -129,6 +129,10 @@
     cursor: pointer
     padding-top: 0
     margin-top: 450px
+    &.hover
+      opacity: 0.9
+      -moz-opacity: 0.9
+      filter: alpha(opacity = 90)
   .spread_prev
     background: url('/images/embed/spread_prev.gif') no-repeat
   .spread_next
