fix bug: 分类页没有关注按钮时对不齐的bug

--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -78,6 +78,7 @@
     .spread_rowbox
       display: inline-block
       width: 80px
+      float: left
       .spread_rowimg
         width: 60px
         height: 60px
