每个分类只显示前六个

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -7,7 +7,7 @@
       %img{src: @category.top_blog.image}
   .spread_bg
   .mainbox
-    - @category.category_subs.each do |sub|
+    - @category.category_subs.slice(0, 6).each do |sub|
       .contentbox
         .transparentbg<
           &nbsp;
