--- a/app/views/sitemap/index.html.haml
+++ b/app/views/sitemap/index.html.haml
@@ -1,5 +1,5 @@
 - @sub_title = "宽岛地图"
-- @nav_now = "sitemap"
+- @nav_now = "discovery"
 - content_for :title, @sub_title
 - @site_layout = "site"
 
