--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -3,7 +3,7 @@
   .navigator{data: {widget: "navigator", highlight: (@nav_now || "dashboard")}}<
     - if current_user
       %a.z_dashboard{href: fucking_root}><
-        我的主页
+        我的家
       %span><
         |    
     %a.z_news{href: news_posts_path}><
