--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -1225,26 +1225,14 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 
 .dashboard .head .head_bg{
 	width:900px;
-	height:100px;
-	background-color:#548ff4;
-	-moz-border-radius:15px; 
-	-webkit-border-radius:15px; 
-	border-radius:15px;
+	height:150px;
 	position:absolute;
 	top:0;
 	left:0;
 	
 }
 
-.dashboard .head .dialog_arrow{
-	width:30px;
-	height:30px;
-	background:url('images/dialog_arrow.gif');
-	position:absolute;
-	top:99px;
-	left:805px;
-	
-}
+
 
 
 
@@ -1263,48 +1251,56 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	margin-left:60px;
 }
 
+.dashboard .left{
+	width:30px;
+}
+
 .dashboard .post_area div{
 	height:100px;
 	float:left;
 }
 .dashboard .post_area a{
 	display:block;
-	width:126px;
-	height:80px;
+	width:110px;
+	height:90px;
 	overflow:hidden;
 	float:left;
-	margin-top:10px;
-	-moz-border-radius:10px;
-	border-radius:10px;
-	background-position:0px -6px;
 	text-indent: -100px;
 }
-.dashboard .post_area a:hover{
-	background-color: #2660c2;
-}
 
-.dashboard .post_area a:active{
-	background-color: #009fff;
-}
-
-.dashboard .post_area .left{
-	width:50px;
-}
 
 .dashboard .post_area .text{
 	background-image:url('images/dash_text.gif');
 }
 
+.dashboard .post_area  .text:hover{
+ 	background-image:url('images/dash_text_hover.gif');
+}
+
+
 .dashboard .post_area .picture{
 	background-image:url('images/dash_picture.gif');
 }
-
+.dashboard .post_area .picture:hover{
+	background-image:url('images/dash_picture_hover.gif');
+}
 .dashboard .post_area .link{
 	background-image:url('images/dash_link.gif');
 }
-
+.dashboard .post_area .link:hover{
+	background-image:url('images/dash_link_hover.gif');
+}
 .dashboard .post_area .video{
 	background-image:url('images/dash_video.gif');
+}
+.dashboard .post_area .video:hover{
+	background-image:url('images/dash_video_hover.gif');
+}
+.dashboard .post_area .audio{
+	background-image:url('images/dash_audio.gif');
+}
+.dashboard .post_area .audio:hover{
+	background-image:url('images/dash_audio_hover.gif');
 }
 
 .dashboard .head_menu{
@@ -1322,7 +1318,7 @@ font-family:"Hiragino Sans GB",hei,"microsoft yahei";
 	float:left;
 	text-decoration: none;
 	margin:0px 10px;
-	color:#cfe9ff;
+	color:#3366cc;
 	*text-align:center;
 	cursor:pointer;
 }
@@ -3039,7 +3035,7 @@ margin-bottom:30px;
 /***********************************dashboard_my_homepage************************************************/
 
 .dashboard .head{
-	background: url('images/dash_.gif') no-repeat;
+	background: url('images/dash_bg.gif') no-repeat;
 	width:900px;
 	height:150px;
 	overflow:hidden;
@@ -3058,7 +3054,7 @@ margin-bottom:30px;
     top:48px;
     left:55px;
     z-index:1;
-    border:3px solid #548ff4;
+    border:3px solid #7999dd;
     border-bottom:none;
     border-top-right-radius:10px;
     border-top-left-radius:10px;
@@ -3078,7 +3074,7 @@ margin-bottom:30px;
 	line-height:40px;
 	text-align:center;
 	position:absolute;
-	top:101px;
+	top:99px;
 	left:20px;
 	border-bottom-right-radius:10px;
 	border-bottom-left-radius:10px;
