Improve ListDisplay#render for renderAsEmpty

--- a/app/views/posts/_form_audio.html.haml
+++ b/app/views/posts/_form_audio.html.haml
@@ -12,7 +12,9 @@
         %a.prev_page{href: "#", 'data-action' => 'turnPrevPage'} 上一页
         %a.next_page{href: "#", 'data-action' => 'turnNextPage'} 下一页
     .empty_message
-      Nothing to see here
+      没有搜索到
+      %span.search_key>
+      对应的歌曲
   .option_text_top<
     &nbsp;
   .title_text.audio{'data-input-holder' => 1}
