改进回复区：打开回复区自动滚到自己的最后一条回复

--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -5,7 +5,7 @@
   .c_content
     %input{ :type => "hidden", :name => "count", :value => @post.comments.count }
     - @post.comments.each do |comment|
-      .box
+      .box{class: (current_user == comment.author ? "mine" : "")}
         %img.c_avatar{:src => comment.author.primary_blog.icon.url_for(:'16')}
         %span.c_body
           %span.c_name><
