Fix metrics for IE

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -423,6 +423,7 @@ input#song_id
   position: absolute
   z-index: 1
   top: 133px
+  *top: 112px
   color: #68879F
   font-size: 14px
   line-height: 2
@@ -431,6 +432,7 @@ input#song_id
   padding: 10px 10px 0px 10px
   border-top: 0
   width: 600px
+  _width: 626px
   @include border_radius(0 0 10px 10px)
 
 .song_list
