--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -477,3 +477,9 @@ input#song_id
 .last_page .next_page,
 .first_page .prev_page
   visibility: hidden
+
+.audio_preview
+  margin-bottom: 1em
+
+  .player
+    margin-left: 1em
