add audio on dashboard

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -32,6 +32,7 @@
       %a.picture{href: new_post_path("pics", @blog)} 发布图片
       %a.link{href: new_post_path("link", @blog)} 发布链接
       %a.video{href: new_post_path("video", @blog)} 发布视频
+      %a.audio{href: new_post_path("audio", @blog)} 发布音乐
       .right
     - unless flash.blank?
       .dashboard_flash
