--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -8,7 +8,7 @@
 @mixin post_area_button
   width: 125px
   display: block
-  background: url('/images/dash_.gif') no-repeat
+  background: url('/images/embed/dash_bg.gif') no-repeat
 
 a.page_name
   font-weight: bold
@@ -158,7 +158,7 @@ a.page_name
 
   .head
     clear: both
-    background: url('/images/dash_.gif') no-repeat
+    background: url('/images/embed/dash_bg.gif') no-repeat
     width: 900px
     height: 130px
     overflow:hidden
@@ -181,10 +181,14 @@ a.page_name
   .icon_s
     width: 30px
     height: 30px
-    border: 3px solid #548ff4
-    -webkit-border-top-left-radius: 5px
-    -moz-border-radius-topleft: 5px
-    border-top-left-radius: 5px
+    border: 3px solid #7999dd
+    border-bottom: 0
+    -webkit-border-top-left-radius: 10px
+    -moz-border-radius-topleft: 10px
+    border-top-left-radius: 10px
+    -webkit-border-top-right-radius: 10px
+    -moz-border-radius-topright: 10px
+    border-top-right-radius: 10px
     background: url('/images/default_icon_30.jpg') no-repeat 0 0
     overflow: hidden
     position: absolute
@@ -196,40 +200,44 @@ a.page_name
     margin-left: 60px
     text-decoration: none
 
+    .left
+      width: 30px
     div
       height: 100px
       float: left
     
     a
       display: block
-      width: 126px
-      height: 80px
+      width: 110px
+      height: 90px
       overflow: hidden
       float: left
-      margin-top: 10px
-      -moz-border-radius: 10px
-      border-radius: 10px
-      background-position: 0px -6px
       text-indent: -100px
-      &:hover
-        background-color: #2660c2
-      &:active
-        background-color: #009fff
-
-    .left
-      width: 50px
 
     .text
-      background-image: url('/images/dash_text.gif')
+      background-image: url('/images/embed/dash_text.gif')
+      &:hover
+        background-image: url('/images/embed/dash_text_hover.gif')
 
     .picture
-      background-image: url('/images/dash_picture.gif')
+      background-image: url('/images/embed/dash_picture.gif')
+      &:hover
+        background-image: url('/images/embed/dash_picture_hover.gif')
 
     .link
-      background-image: url('/images/dash_link.gif')
+      background-image: url('/images/embed/dash_link.gif')
+      &:hover
+        background-image: url('/images/embed/dash_link_hover.gif')
 
     .video
-      background-image: url('/images/dash_video.gif')
+      background-image: url('/images/embed/dash_video.gif')
+      &:hover
+        background-image: url('/images/embed/dash_video_hover.gif')
+
+    .audio
+      background-image: url('/images/embed/dash_audio.gif')
+      &:hover
+        background-image: url('/images/embed/dash_audio_hover.gif')
 
   .head_menu
     width: 180px
@@ -244,7 +252,7 @@ a.page_name
       float: left
       text-decoration: none
       margin: 0px 10px
-      color: #cfe9ff
+      color: #3366cc
       *text-align: center
       cursor: pointer
     span
@@ -417,7 +425,7 @@ a.page_name
   line-height: 40px
   text-align: center
   position: absolute
-  top: 101px
+  top: 99px
   left: 20px
   border-bottom-right-radius: 10px
   border-bottom-left-radius: 10px
